--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   http: ^0.13.3
   google_fonts: ^2.1.0
   get_storage:
+  bottom_sheet:
   uuid:
+  auto_size_text: ^3.0.0-nullsafety.0
 
 
 
