--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   bottom_sheet:
   flutter_staggered_grid_view:
   uuid:
+  cached_network_image: ^3.0.0
   flutter_slidable: ^0.6.0
   flutter_card_swipper: ^0.4.0
   clay_containers: 0.3.2
