--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,8 +25,10 @@ dependencies:
     sdk: flutter
   get: ^4.1.4
   http: ^0.13.3
+  photo_view: 0.11.1
   google_fonts: ^2.1.0
   get_storage:
+  logger:
   bottom_sheet:
   flutter_staggered_grid_view:
   uuid:
@@ -34,8 +36,11 @@ dependencies:
   flutter_slidable: ^0.6.0
   flutter_card_swipper: ^0.4.0
   clay_containers: 0.3.2
+  timeago: ^3.1.0
   auto_size_text: ^3.0.0-nullsafety.0
-
+  image_picker: ^0.8.0+3
+  file_picker: ^3.0.2+2
+  dio:
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,8 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-     - assets/images/
-     - assets/icons/
+    - assets/images/
+    - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
