--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   image_picker: ^0.8.0+3
   file_picker: ^3.0.2+2
   dio:
+  url_launcher:
 
 
   # The following adds the Cupertino Icons font to your application.
